# rust-cli

./: Cargo.toml  README.md
src/: main.rs
src/backend/: file_scanner.rs
