[package]
name = "app"
version = "0.1.0"
description = "Raspirus CLI"
authors = ["Demetz Benjamin, Hell Björn Felix"]
license = "GPL"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
md5 = "0.7.0"
sysinfo = "0.27"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
rusqlite = { version = "0.28.0", features =  ["bundled"] }
terminal_size = "0.2.3"
tokio = "1.23.0"
walkdir = "2.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

